--- a/VirtualBike/res/values/strings.xml
+++ b/VirtualBike/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_search_hint">输入地点查询</string>
+    <string name="progress_start">城市数据载入中</string>
 </resources>
